feat: add styles to game results section and make it responsive

--- a/index.html
+++ b/index.html
@@ -332,12 +332,10 @@
 			</div>
 		</div>
 	</header>
-	<section class="container mt-4" style="box-shadow: 0 -4px 8px 2px var(--clr-light);">
-		<div class="row">
-			<div
-				class="col-3 col-lg-2 bg-light d-flex flex-column align-items-center justify-content-center"
-				style="border-right: 0.25rem solid var(--clr-light);"
-			>
+	<section class="container p-0 bg-light mt-4" style="box-shadow: 0 -4px 8px 2px var(--clr-light);">
+		<div class="games-slider container">
+			<div class="games-slider-select d-flex flex-column align-items-center justify-content-center"
+				style="border-right: 0.25rem solid var(--clr-light);">
 				<span class="font-weight-bold" style="font-size: 0.825rem">Resultados:</span>
 				<select class="custom-select">
 					<option>Todos</option>
@@ -348,27 +346,253 @@
 					<option>NFL</option>
 				</select>
 			</div>
-			<div class="col-9 col-lg-10 bg-light d-flex align-items-center" style="gap: 0.375rem;">
-				<div class="card bg-light mb-3" style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
-					<div class="text-center text-uppercase pt-2" style="font-size: 0.75rem; font-weight: 300;">Finalizado</div>
-					<div class="card-body d-flex flex-column p-2" style="font-size: 0.825rem;">
-						<div class="d-flex justify-content-between align-items-center">
-							<p class="d-flex align-items-center justify-content-start m-0">
-								<img src="./assets/flags/1.png" class="mr-2" style="height: 1.25rem; width: auto;">
-								<a href="#" style="text-decoration: none;">San Marino</a>
-							</p>
-							<span style="font-size: 1.25rem; background-color: var(--clr-light); padding: 0.25rem;">0</span>
+			<div class="bg-light d-flex align-items-center" style="gap: 0.375rem; overflow-x: scroll;">
+				<div class="d-flex flex-column justify-content-center"
+					style="padding-right: 0.375rem; border-right: 1px solid var(--clr-light);">
+					<div class="font-weight-bold text-uppercase p-2" style="font-size: 0.825rem">UEFA Nations League</div>
+					<div class="d-flex align-items-center" style="gap: 0.375rem;">
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/1.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">San Marino</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">0</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/2.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Estonia</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+								</div>
+							</div>
 						</div>
-						<div class="d-flex justify-content-between align-items-center">
-							<p class="d-flex align-items-center justify-content-start m-0">
-								<img src="./assets/flags/2.png" class="mr-2" style="height: 1.25rem; width: auto;">
-								<a href="#" style="text-decoration: none;">Estonia</a>
-							</p>
-							<span class="font-weight-bold" style="font-size: 1.25rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/3.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Rumania</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/4.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Bosnia</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">1</span>
+								</div>
+							</div>
+						</div>
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/5.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Macedonia</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">0</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/6.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Bulgaria</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">1</span>
+								</div>
+							</div>
+						</div>
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/7.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Rumania</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/8.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Bosnia</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">1</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="d-flex flex-column justify-content-center"
+					style="padding-right: 0.375rem; border-right: 1px solid var(--clr-light);">
+					<div class="font-weight-bold text-uppercase p-2" style="font-size: 0.825rem">Liga Argentina</div>
+					<div class="d-flex align-items-center" style="gap: 0.375rem;">
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/9.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">San Marino</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">0</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/10.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Estonia</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+								</div>
+							</div>
+						</div>
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/11.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Rumania</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/12.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Bosnia</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">1</span>
+								</div>
+							</div>
+						</div>
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/13.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">San Marino</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">0</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/14.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Estonia</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="d-flex flex-column justify-content-center"
+					style="padding-right: 0.375rem; border-right: 1px solid var(--clr-light);">
+					<div class="font-weight-bold text-uppercase p-2" style="font-size: 0.825rem">Fútbol america</div>
+					<div class="d-flex align-items-center" style="gap: 0.375rem;">
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/15.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Rumania</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/16.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Bosnia</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">1</span>
+								</div>
+							</div>
+						</div>
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/17.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Macedonia</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">0</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/18.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Bulgaria</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">1</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="d-flex flex-column justify-content-center"
+					style="padding-right: 0.375rem; border-right: 1px solid var(--clr-light);">
+					<div class="font-weight-bold text-uppercase p-2" style="font-size: 0.825rem">Nfl</div>
+					<div class="d-flex align-items-center" style="gap: 0.375rem;">
+						<div class="card bg-light mb-3"
+							style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+							<div class="text-center text-uppercase pt-1" style="font-size: 0.75rem; font-weight: 300;">Finalizado
+							</div>
+							<div class="card-body d-flex flex-column px-2 pb-2 pt-1" style="font-size: 0.825rem;">
+								<div class="d-flex justify-content-between align-items-center; gap: 1px;">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/19.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Rumania</a>
+									</p>
+									<span class="font-weight-bold"
+										style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+								</div>
+								<div class="d-flex justify-content-between align-items-center">
+									<p class="d-flex align-items-center justify-content-start m-0">
+										<img src="./assets/flags/20.png" class="mr-2" style="height: 1.25rem; width: auto;">
+										<a href="#" style="text-decoration: none;">Bosnia</a>
+									</p>
+									<span style="font-size: 1.125rem; background-color: var(--clr-light); padding: 0.25rem;">1</span>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 	</section>
 	<main>
