feat: implement a custom container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 	<header>
 		<div class="text-center d-none d-xl-block" style="background-color: #eceff4; font-size: 0.75rem">
-			<div class="container">
+			<div class="my-custom-container">
 				<span class="font-weight-bold">Es noticia: </span>
 				<a href="#" style="color: var(--clr-dark-gray);">Canelo vs Golovkin 3</a> /
 				<a href="#" style="color: var(--clr-dark-gray);">América vs Chivas</a> /
@@ -36,7 +36,7 @@
 				<a href="#" style="color: var(--clr-dark-gray);">VIDEOS de hoy</a>
 			</div>
 		</div>
-		<nav class="container">
+		<nav class="my-custom-container">
 			<div class="row" style="padding-inline: 15px;">
 				<div class="col-4 d-none d-sm-flex align-items-center p-0">
 					<a class="mr-2 d-none d-lg-block" href="#" style="text-decoration: none; color: black;">
@@ -67,16 +67,16 @@
 		</nav>
 		<nav class="navbar navbar-expand-lg navbar-dark py-2 p-lg-0 px-0">
 			<div style="width:100%;">
-				<div class="container">
+				<div class="my-custom-container">
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 						aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
 				</div>
-				<div class="collapse navbar-collapse position-relative" id="navbarSupportedContent">
+				<div class="collapse navbar-collapse my-custom-container position-relative" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 						<div class="bg-wrapper">
-							<div class="container">
+							<div class="my-custom-container">
 								<li class="nav-item dropdown mt-lg-0 mt-2 position-static">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
@@ -124,7 +124,7 @@
 							</div>
 						</div>
 						<div class="bg-wrapper">
-							<div class="container">
+							<div class="my-custom-container">
 								<li class="nav-item dropdown position-static">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
@@ -206,7 +206,7 @@
 							</div>
 						</div>
 						<div class="bg-wrapper">
-							<div class="container">
+							<div class="my-custom-container">
 								<li class="nav-item dropdown position-static">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
@@ -228,7 +228,7 @@
 							</div>
 						</div>
 						<div class="bg-wrapper">
-							<div class="container">
+							<div class="my-custom-container">
 								<li class="nav-item dropdown mb-lg-0 mb-2 position-static">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
@@ -269,7 +269,7 @@
 							</div>
 						</div>
 					</ul>
-					<div class="container">
+					<div class="my-custom-container">
 						<form class="form-inline d-flex align-items-center justify-content-end position-relative">
 							<input class="form-control rounded-0 search-input" type="search" placeholder="Buscar en marca.com"
 								aria-label="Search">
@@ -281,7 +281,7 @@
 							</svg>
 						</form>
 					</div>
-					<div class="container d-flex d-sm-none mt-2 btns-nav" style="gap: 0.5rem;">
+					<div class="my-custom-container d-flex d-sm-none mt-2 btns-nav" style="gap: 0.5rem;">
 						<button class="btn btn-login py-1 fs-md-1 rounded-0" style="width: 100%;">Iniciar sesión</button>
 						<button class="btn btn-subscribe py-1 rounded-0" style="width: 100%;">Suscribete</button>
 					</div>
@@ -290,7 +290,7 @@
 			</div>
 		</nav>
 		<div class="nav-teams py-2" style="background-color: #eceff4;">
-			<div class="container">
+			<div class="my-custom-container">
 				<ul class="m-0 p-0 row align-items-center justify-content-center">
 					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
 								src="./assets/logos/1.png" alt=""></a></li>
@@ -332,8 +332,8 @@
 			</div>
 		</div>
 	</header>
-	<section class="container p-0 bg-light mt-4" style="box-shadow: 0 -4px 8px 2px var(--clr-light);">
-		<div class="games-slider container">
+	<section class="my-custom-container bg-light mt-4" style="box-shadow: 0 -4px 8px 2px var(--clr-light);">
+		<div class="games-slider pl-md-2">
 			<div class="games-slider-select d-flex flex-column align-items-center justify-content-center"
 				style="border-right: 0.25rem solid var(--clr-light);">
 				<span class="font-weight-bold" style="font-size: 0.825rem">Resultados:</span>
@@ -596,7 +596,7 @@
 		</div>
 	</section>
 	<main>
-		<section class="container-fluid py-3 border-top mt-3" style="border-width: 0.125rem !important; max-width: 1140px;">
+		<section class="my-custom-container py-3 border-top mt-3" style="border-width: 0.125rem !important;">
 			<div class="row">
 				<div class="col-12 col-md-8">
 					<div class="card m-0 m-md-1">
@@ -654,16 +654,16 @@
 			</div>
 		</section>
 
-		<section class="container"></section>
-		<section class="container"></section>
-		<section class="container"></section>
-		<section class="container"></section>
-		<section class="container"></section>
+		<section class="my-custom-container"></section>
+		<section class="my-custom-container"></section>
+		<section class="my-custom-container"></section>
+		<section class="my-custom-container"></section>
+		<section class="my-custom-container"></section>
 	</main>
 
 	<footer class="footer">
 		<div class="pt-3 pb-4" style="background-color: var(--clr-dark);">
-			<div class="container">
+			<div class="my-custom-container">
 				<p class="text-white pb-2 text-center font-weight-bold" style="border-bottom: 1px solid white;">Otras web de
 					Unidad Editorial</p>
 				<nav class="justify-content-between footer-navbar">
@@ -717,7 +717,7 @@
 			</div>
 		</div>
 		<div style="background-color: #eceff4;">
-			<div class="container pt-2 pb-4">
+			<div class="my-custom-container pt-2 pb-4">
 				<ul class="footer-links p-0 text-center" style="list-style-type: none;">
 					<li class="font-weight-bold my-2">© Septiembre 2022 Unidad Editorial Información Deportiva, S.L.U. Todos los
 						derechos reservados.</li>
