fix: correct navbar behaviour

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 				</div>
-				<div class="collapse navbar-collapse my-custom-container position-relative" id="navbarSupportedContent">
+				<div class="collapse navbar-collapse helper-container position-relative" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 						<div class="bg-wrapper">
 							<div class="my-custom-container">
