--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 					<div class="card m-0 m-md-1">
 						<img class="card-img-top" src="./assets/images/img1.jpg" alt="Img1">
 						<div class="card-body">
-							<p class="card-title text-danger">Rata conchesumare</p>
+							<p class="card-title text-danger text-uppercase">Rata conchesumare</p>
 							<a href="#" class="text-dark">
 								<h1>Ir a mamitas puebla</h1>
 							</a>
@@ -654,7 +654,78 @@
 			</div>
 		</section>
 
-		<section class="my-custom-container"></section>
+		<section class="my-custom-container py-3 border-top mt-3" style="border-width: 0.125rem !important;">
+			<div class="row">
+				<div class="col-12 col-md-8">
+					<div class="card m-0 m-md-1" style="flex-direction: row;">
+						<img class="card-img-top align-self-start" src="./assets/images/img5.jpg" alt="Img5" style="width: 50%; height: auto;">
+						<div class="card-body">
+							<p class="card-title text-danger text-uppercase">Actualidad</p>
+							<a href="#" class="text-dark">
+								<h1>Viva méxico, grita el temblor del 19 de septiembre</h1>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<img src="./assets/images/ad2.png" alt="Ad2">
+				</div>
+			</div> 
+			<div class="row mt-3 border-top" style="border-width: 0.150rem !important;">
+				<div class="col-12 col-md-3">
+					<div class="card m-0 m-md-1" style="background-color: #f5f7fa">
+						<img class="card-img-top align-self-start" src="./assets/images/img6.jpg" alt="Img6" style="width: 100%; height: auto;">
+						<div class="card-body">
+							<p class="card-title text-danger text-uppercase">Streaming</p>
+							<a href="#" class="text-dark">
+								<h1 style="word-break: break-all;">Bolillo-olimpiadas en vivo desde facebook gaming</h1>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-5">
+					<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa">
+						<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;"
+							src="./assets/images/img7.jpg" alt="Img7">
+						<div class="card-body p-0 mr-1">
+							<p class="card-title text-danger font-weight-bold text-uppercase"
+								style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Chivas pierde otra</p>
+							<a href="#" class="text-dark">
+								<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?
+								</h5>
+							</a>
+						</div>
+					</div>
+					<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa">
+						<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;"
+							src="./assets/images/img8.jpg" alt="Img8">
+						<div class="card-body p-0 mr-1">
+							<p class="card-title text-danger font-weight-bold text-uppercase"
+								style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Novedad</p>
+							<a href="#" class="text-dark">
+								<h5 style="word-break: break-all;">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+								</h5>
+							</a>
+						</div>
+					</div>
+					<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa">
+						<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;"
+							src="./assets/images/img9.jpg" alt="Img9">
+						<div class="card-body p-0 mr-1">
+							<p class="card-title text-danger font-weight-bold text-uppercase"
+								style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Trujo</p>
+							<a href="#" class="text-dark">
+								<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?
+								</h5>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<img src="./assets/images/ad.jpg" alt="Ad" style="text-align:center; margin:1rem;">
+				</div>
+			</div>
+		</section>
 		<section class="my-custom-container"></section>
 		<section class="my-custom-container"></section>
 		<section class="my-custom-container"></section>
